src/app/puzzle-list/puzzle-list.component.scss
@import '/src/app/globals.scss';

.top-buttons {
    margin-top: 2rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;

    .top-btn-container {
        margin-right: 2rem;
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        justify-content: flex-end;
    
        gap: 1rem;

        .mat-button:not(.mat-button-disabled) {
            color: clr(primary);
            transition: 0.3s;

            &:hover {
                color: on-clr(primary);
            }
        }

        .mat-stroked-button:not(.mat-button-disabled) {
            color: clr(primary);
            border-color: clr(primary);
            transition: 0.3s;

            &:hover {
                background-color: clr(primary);
                color: on-clr(primary);
            }
        }
    }
    
    .top-menu-container {
        margin-left: 1rem;
        visibility: hidden;
        display: flex;
    
        button {
            background: none;
            z-index: 15;
            border: none;
            display: flex;
            padding: 0;
        }
    }
}


.list-container {
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    overflow: hidden;

    h3 {
        font-size: 32pt;
    }
}


@media screen and (max-width: 550px) {
    .top-buttons {
        margin-top: 1rem;

        .top-menu-container {
            visibility: visible;
        }
    
        .top-btn-container {
            z-index: 5;
            margin-right: 1rem;
        }
    }


    .list-container {
        border-radius: 10px;
    }
    
    ::ng-deep .animated-tab-container {
        .nav-tabs {
            display: none;
        }
    }
    
}

